fix: cropper rwd

--- a/src/assets/sass/page/_back_webinfo.scss
+++ b/src/assets/sass/page/_back_webinfo.scss
@@ -244,6 +244,9 @@
 .newuploading {
     display: flex;
     gap: 10px;
+    @media (max-width: 650px) {
+        display: block;
+      }
   
     .uploadbtn{
         margin: 3px 0 0;
@@ -305,6 +308,13 @@
             color: $slategray;
             font-size: 14px;
             margin: 15px 0;
+            overflow: visible;
+            white-space: normal;
+            text-overflow: unset;
+            word-wrap: break-word;
+            @media (max-width: 650px) {
+                margin: 5px 0;
+              }
         }
 
     }
